--- a/PL-BlutBad/client/templates/ranking-t.html
+++ b/PL-BlutBad/client/templates/ranking-t.html
@@ -9,7 +9,7 @@
 						<li class = "sortBy"><a href="#" class="{{_id}}">{{name}}</a></li> 
 					{{/each}}
 				</ul> 	
-				<input type="button" id="mostrar_ranking" value="Mostrar a los mejores!"> 
+				<input type="button" class = "btn" id="mostrar_ranking" value="Mostrar a los mejores!"> 
 			</div> 
 			
 			<div id = "ranking_container">
