--- a/PL-BlutBad/client/templates/hall-torneo-t.html
+++ b/PL-BlutBad/client/templates/hall-torneo-t.html
@@ -7,15 +7,10 @@
         <h1>{{title}}</h1>
         <img src="{{pic}}" alt="sample image" width="606" height="115" class="imgtor"/>
         <div class="post-detailss"> 
-          Creado por <a href="">{{getUsername user_create}}</a> en <a href="#">Torneos</a>  |  <a href="#">3 comments</a>
-          
+          Creado por <a href="">{{getUsername user_create}}</a> en <a href="#">Torneos</a> 
           <span class="badge badge-success">Empieza: {{date_start}}</span>
           <span class="badge badge-important">Termina: {{date_finish}}</span>
-          <span class="{{participoClass}} apuntarme">Participantes: {{numParticip}}</span>
-          
-          
-          <span class="badge badge-important finalizarTorneo">Finalizar el torneo!</span>
-          
+          <span class="{{participoClass}} apuntarme">Participantes: {{numParticip}}</span>      
         </div>
         
         <div class="post-description">
@@ -29,6 +24,7 @@
     {{#if multiTorneo}} 
       <div class="container"> 
         <span class="badge badge-success startTorneo">Empezar el torneo</span>  
+        <span class="badge badge-important finalizarTorneo">Finalizar el torneo!</span>
         <h2>Etapas del torneo </h2> 
         <div id="tab" class="btn-group" data-toggle="buttons-radio">
           <a href="#" class="btn btn-large btn-info active" data-toggle="tab">Preseleccion</a>
