--- a/PL-BlutBad/client/templates/juegos-t.html
+++ b/PL-BlutBad/client/templates/juegos-t.html
@@ -25,9 +25,9 @@
 
 <template name="gamecontainer"> 
   <div id="gamecontainer">    
-  	 <div id="mis-torneos">
-  	 	{{>misTorneos}}
-  	 </div>
+  	<div id="mis-torneos">
+  		{{>misTorneos}}
+  	</div>
 	{{>idnClarca}}
 	{{>idnAlien}}
 	{{>idnFroot}}
@@ -132,7 +132,7 @@
               {{/each}}
             </div>
         {{else}}
-	     	<h5>No participa en ningún torneo, apúntese a uno, lo pasará en grande!</h5>
+	     	<h5>Apúntate a un torneo, lo pasarás en grande!</h5>
 	    {{/if}}
     </div>     
 </template>
