compatibilidad para alien y carca

--- a/PL-LowerLayers/prototipo-5/style/client.css
+++ b/PL-LowerLayers/prototipo-5/style/client.css
@@ -113,6 +113,14 @@ html{
 	height: 420px;
 }
 
+#menuRightClick {
+    display: none;
+    position: absolute;
+    padding: 10px;
+    background-color: #ddd;
+    border: 1px solid #000;
+}
+
 
 .alaputaizq{
 	float:left;
