--- a/PL-BlutBad/client/templates/hall-torneo-t.html
+++ b/PL-BlutBad/client/templates/hall-torneo-t.html
@@ -25,6 +25,8 @@
       <div class="container"> 
         <span class="badge badge-success startTorneo">Empezar el torneo</span>  
         <span class="badge badge-important finalizarTorneo">Finalizar el torneo!</span>
+        <span class="badge badge-important jugarEtapa">Jugar la etapa</span>
+
         <h2>Etapas del torneo </h2> 
         <div id="tab" class="btn-group" data-toggle="buttons-radio">
           <a href="#" class="btn btn-large btn-info active" data-toggle="tab">Preseleccion</a>
