--- a/PL-LowerLayers/prototipo-5/style/client.css
+++ b/PL-LowerLayers/prototipo-5/style/client.css
@@ -85,13 +85,33 @@ html{
 
 .linkmatch{
 	cursor:pointer;
-	text-decoration:underline;"
+	text-decoration:underline;
 }
 
 #matches table tr td{
 	text-align: center;
 	width: 250px;
 }
+
+#byuserranking table,
+#bygameranking table {
+	border: 1px solid #666;
+	margin: 20px 0 20px 0 !important;
+}
+
+#byuserranking th, #byuserranking td,
+#bygameranking th, #bygameranking td {
+	padding: 2px 4px 2px 4px !important;
+	text-align: center;
+	vertical-align: top;
+	background-color: #10B787;
+}
+
+#byuserranking th,
+#bygameranking th {
+	background-color: #247941;
+}
+
 
 #accordion{	
 	position: absolute;
