Cambiado el contenido del botón mis torneos en función del tipo de partida volátil (creada en torneos o hall) así como el título correspondiente en la sección de partidas; modificados más estilos

--- a/PL-BlutBad/public/css/default.css
+++ b/PL-BlutBad/public/css/default.css
@@ -897,6 +897,10 @@ td, th {
 	text-align: center;
 }
 
-.apuntarme, .in_tor {
+.apuntarme, .in_tor, .startTorneo, .finalizarTorneo, .gameim {
 	cursor: pointer;
 } 
+
+#mitor, #nuevaPartida {
+	text-decoration: none;
+}
