--- a/PL-BlutBad/client/templates/hall-clarcassone-t.html
+++ b/PL-BlutBad/client/templates/hall-clarcassone-t.html
@@ -73,7 +73,7 @@ http://bootsnipp.com/snippets/featured/condensed-table-example -->
       </div>      
 
 		  <div class="span5 well">
-        <h3>Partidas creadas</h3>
+        <h3>{{tipo_partys}}</h3>
 		    {{#each partidasVolatiles}}
           <table class="table table-striped table-condensed">
             <thead>
