--- a/PL-BlutBad/client/templates/torneos-t.html
+++ b/PL-BlutBad/client/templates/torneos-t.html
@@ -43,7 +43,7 @@
                                         <input type="button" id="{{_id}}" class="btn editar" value="Editar torneo">
                                         <input type="button" id="{{_id}}" class="btn borrar_tor" value="Borrar torneo">
                                     {{/if}}                                   
-                                    <input type="button" id="{{_id}}" class = "btn {{clase_Apuntada _id getUserId}}" value="{{apunto _id getUserId}} {{participantes _id}}">
+                                    <input type="button" id="{{_id}}" class = "{{clase_Apuntada _id getUserId}}" value="{{apunto _id getUserId}} {{participantes _id}}">
                                 {{else}}
                                     <i>Sign in para ver opciones de torneos</i>  
                                 {{/if}} 
