--- a/PL-BlutBad/client/templates/hall-torneo-t.html
+++ b/PL-BlutBad/client/templates/hall-torneo-t.html
@@ -22,24 +22,39 @@
 
       
     {{#if multiTorneo}} 
-      <div class="container"> 
-        <span class="badge badge-success startTorneo">Empezar el torneo</span>  
-        <span class="badge badge-important finalizarTorneo">Finalizar el torneo!</span>
-        <span class="badge badge-important jugarEtapa">Jugar la etapa</span>
+      <div class="container">
 
-        <h2>Etapas del torneo </h2>
+      <h2>Menu del torneo </h2>
         <div id="tab" class="btn-group" data-toggle="buttons-radio">
-          {{#each etapasTorneo}} 
-            <a href="" class="btn btn-large btn-info etapasTorneo {{etapasTorneoActive}}" data-toggle="tab">{{name}}</a>
+          {{#each multiMenuTorneo}} 
+            <a href="" class="btn btn-large btn-info multiMenuTorneo {{multiMenuTorneoActive}}" data-toggle="tab">{{name}}</a>
           {{/each}}
         </div>
-       
-        {{#if showParticipantes}} 
-          {{>participantes}}
+  
+        {{#if showEtapasTorneo}}
+            <span class="badge badge-success startTorneo">Empezar el torneo</span>  
+            <span class="badge badge-important finalizarTorneo">Finalizar el torneo!</span>
+            <span class="badge badge-important jugarEtapa">Jugar la etapa</span>
+
+
+            <h2>Etapas del torneo </h2>
+            <div id="tab" class="btn-group" data-toggle="buttons-radio">
+              {{#each etapasTorneo}} 
+                <a href="" class="btn btn-large btn-info etapasTorneo {{etapasTorneoActive}}" data-toggle="tab">{{name}}</a>
+              {{/each}}
+            </div>
+           
+            {{#if showParticipantes}} 
+              {{>participantes}}
+            {{/if}}
+
+            {{#if showEtapa}}
+              {{>showEtapaTorneo}}
+            {{/if}}
         {{/if}}
 
-        {{#if showEtapa}}
-          {{>showEtapaTorneo}}
+        {{#if showRankingTorneo}}
+          <p>Este es el ranking del torneo loco!</p>
         {{/if}}
 
 
@@ -149,10 +164,30 @@
 </template>
 
 
+<template name="showInfoEtapaTorneo">
+{{#if info}}
+  <table class="table table-striped table-condensed">
+    <thead>
+      <tr>
+        <th>Numero de participantes:</th>
+        <th>Numero de partidas:</th>                                         
+      </tr>
+    </thead>   
+    <tbody>
+      <tr>
+        <td>{{info.participantes}}</td>
+        <td>{{info.partidas}}</td>                                    
+      </tr>       
+    </tbody>
+  </table>
+  {{/if}}
+</template>
 
 <template name="showEtapaTorneo">
-  
         <div class="span5">
+        
+        {{>showInfoEtapaTorneo}}
+
           <table class="table table-striped table-condensed">
             <thead>
             <tr>
