Simular las partidas de los torneos, crear  puntucion, escoger al ganador

--- a/PL-BlutBad/client/templates/hall-torneo-t.html
+++ b/PL-BlutBad/client/templates/hall-torneo-t.html
@@ -32,6 +32,8 @@
         </div>
   
         {{#if showEtapasTorneo}}
+            <span class="badge badge-success simularEtapa">Simular la etapa</span>  
+
             <span class="badge badge-success startTorneo">Empezar el torneo</span>  
             <span class="badge badge-important finalizarTorneo">Finalizar el torneo!</span>
             <span class="badge badge-important jugarEtapa">Jugar la etapa</span>
