Pasar la funciones del lado del cliente al servidor, para agilizar la creacion/simulacion de partidas

--- a/PL-BlutBad/client/templates/hall-torneo-t.html
+++ b/PL-BlutBad/client/templates/hall-torneo-t.html
@@ -219,7 +219,7 @@
                             <tr>
                               <td>{{getUsername this.user_id}}</td>
                               <td>{{userRango this.user_id}}</td>
-                              <td>{{rol this.user_id ../this._id}}</td>
+                              <td>{{this.puntos}}</td>
                               <td><span class="{{estadoUser this.estado}}">{{this.estado}}</span></td>                                       
                             </tr>
                           {{/each}}           
