Torneos: pasar puntuacion aleatoria del jugador en la simulacion

--- a/PL-BlutBad/client/templates/hall-torneo-t.html
+++ b/PL-BlutBad/client/templates/hall-torneo-t.html
@@ -25,7 +25,7 @@
       <div class="container">
 
       <h2>Menu del torneo </h2>
-        <div id="tab" class="btn-group" data-toggle="buttons-radio">
+        <div id="tab" class="btn-group" data="buttons-radio">
           {{#each multiMenuTorneo}} 
             <a href="" class="btn btn-large btn-info multiMenuTorneo {{multiMenuTorneoActive}}" data-toggle="tab">{{name}}</a>
           {{/each}}
@@ -40,7 +40,7 @@
 
 
             <h2>Etapas del torneo </h2>
-            <div id="tab" class="btn-group" data-toggle="buttons-radio">
+            <div id="tab" class="btn-group" data="buttons-radio">
               {{#each etapasTorneo}} 
                 <a href="" class="btn btn-large btn-info etapasTorneo {{etapasTorneoActive}}" data-toggle="tab">{{name}}</a>
               {{/each}}
