--- a/PL-BlutBad/client/templates/users-connected-t.html
+++ b/PL-BlutBad/client/templates/users-connected-t.html
@@ -1,9 +1,12 @@
 
 <template name="usersConnected">
 	<div id="users-connected">
-		<input type="button" id="hide-users-connected" class="btn btn-primary" value="X" style="display:none">
-		<div id="connected" style="display:none">
-			{{> connected}}
+		<div id="content-users" style="display:none">
+			<p id="title-users"> <strong>Mis amigos</strong></p>
+			<input type="button" id="hide-users-connected" class="btn btn-primary" value="X" >
+			<div id="connected" >
+				{{> connected}}
+			</div>
 		</div>
 		<input type="button" id="show-users-connected" class="btn btn-primary" value="Amigos">
 	</div>
