--- a/PL-BlutBad/public/css/chat.css
+++ b/PL-BlutBad/public/css/chat.css
@@ -18,6 +18,9 @@
 	padding: 10px;
 	width: 70%;
 	margin-bottom: 2px;
+	font-family: Verdana;
+	font-style: oblique;
+	font-size: large;
 }
 
 #hidechat {
