Solucionado conflicto con partidasvolátiles para torneos y el campo creator (no debería crearse); cambio del estado del botón torneos o partidas volátiles

--- a/PL-BlutBad/client/templates/juegos-t.html
+++ b/PL-BlutBad/client/templates/juegos-t.html
@@ -128,7 +128,7 @@
 		{{#if tengoTorneos}}
             <div id="tab" class="btn-group" data-toggle="buttons-radio">
               {{#each torneos}}
-                <a href="#" class="btn {{activeClassTorneo}} miTorneo" id = "mitor" data-toggle="tab">{{titlebtn}}</a>
+                <a href="#" class="btn {{activeClassTorneo}} miTorneo" id = "mitor" data-toggle="tab">{{title}}</a>
               {{/each}}
             </div>
         {{else}}
