Cambio en la base de datos partida, jugadores es objeto

--- a/PL-LowerLayers/prototipo-5/style/client.css
+++ b/PL-LowerLayers/prototipo-5/style/client.css
@@ -133,12 +133,15 @@ html{
 	height: 420px;
 }
 
-#menuRightClick {
-    display: none;
-    position: absolute;
-    padding: 10px;
-    background-color: #ddd;
-    border: 1px solid #000;
+.ui-menu { 
+}
+
+.menuAmigos{
+}
+
+.menuAmigosStyle {
+	cursor:pointer;
+	font-size: 10px;
 }
 
 
