--- a/PL-BlutBad/client/templates/chat-t.html
+++ b/PL-BlutBad/client/templates/chat-t.html
@@ -1,26 +1,28 @@
 
 <template name="chat">
-    <div id="chat">
-        <div id="boxchat" style="display:none">
-        	<div id="headerchat">
-        		<h4 id="nameChat"> {{chatName}} </h4>
-        		<input type="button" id="hidechat" class="btn btn-primary" value="X">
+    {{#if estasRegistrado}}
+        <div id="chat">
+            <div id="boxchat" style="display:none">
+            	<div id="headerchat">
+            		<h4 id="nameChat"> {{chatName}} </h4>
+            		<input type="button" id="hidechat" class="btn btn-primary" value="X">
+            	</div>
+            	<div id="contentchat">
+            		{{> messages}}
+            	</div>
+            	<div id="msgchat">
+            		{{> input}}
+            	</div>
         	</div>
-        	<div id="contentchat">
-        		{{> messages}}
-        	</div>
-        	<div id="msgchat">
-        		{{> input}}
-        	</div>
-    	</div>
-        <input type="button" id="showchat" class="btn btn-primary" value="Chat"></input>
-        <div class="not-register-chat" title="Chat" style="display:none">
-            <p class="alert alert-error">
-            <span class="ui-icon ui-icon-circle-check" style="float:left; margin:0 7px 50px 0;"></span>
-                Para poder chatear debes estar registrado en la plataforma.
-            </p>
+            <input type="button" id="showchat" class="btn btn-primary" value="Chat"></input>
+            <div class="not-register-chat" title="Chat" style="display:none">
+                <p class="alert alert-error">
+                <span class="ui-icon ui-icon-circle-check" style="float:left; margin:0 7px 50px 0;"></span>
+                    Para poder chatear debes estar registrado en la plataforma.
+                </p>
+            </div>
         </div>
-    </div>
+    {{/if}}
 </template>
 
 <template name="messages">
