--- a/PL-BlutBad/client/templates/ranking-t.html
+++ b/PL-BlutBad/client/templates/ranking-t.html
@@ -13,11 +13,13 @@
 			</div> 
 			
 			<div id = "ranking_container">
-				<div class="btn-toolbar">
-				    <button class="btn btn-primary fakeRanking">Fake Ranking</button>
-				    <button class="btn">Boton Funcional 3</button>
-				    <button class="btn">Boton Funcional 2</button>
-				</div>
+				{{#if showIfAdmin}}
+					<div class="btn-toolbar">
+					    <button class="btn btn-primary fakeRanking">Fake Ranking</button>
+					    <button class="btn">Boton Funcional 3</button>
+					    <button class="btn">Boton Funcional 2</button>
+					</div>
+				{{/if}}
 
 
     {{#if show3BestRanking}}
