--- a/PL-BlutBad/client/templates/friends-t.html
+++ b/PL-BlutBad/client/templates/friends-t.html
@@ -1,48 +1,50 @@
 <template name="friends">
 	{{#if show}}
 		{{#if register}}
-			<div id="friends">
-				<h1>Amigos</h1>
+			{{#if tienesListaAmigos}}
+				<div id="friends">
+					<h1>Amigos</h1>
 
-				<div id="my-friends">
+					<div id="my-friends">
 
-					<h3>Mis amigos</h3>
-					<div id="my-friends-perfil">
-						{{>myFriends}}
+						<h3>Mis amigos</h3>
+						<div id="my-friends-perfil">
+							{{>myFriends}}
+						</div>
+
+						<div id="delete-confirm" title="Amigos" style="display:none">
+							<p>
+								<span class="ui-icon ui-icon-alert" style="float:left; margin:0 7px 20px 0;"></span>
+								¿Quieres borrarlo de tu lista de amigos?
+							</p>
+						</div>
+
 					</div>
 
-					<div id="delete-confirm" title="Amigos" style="display:none">
-						<p>
-							<span class="ui-icon ui-icon-alert" style="float:left; margin:0 7px 20px 0;"></span>
-							¿Quieres borrarlo de tu lista de amigos?
-						</p>
+					<div id="list-of-users">
+
+						<h3>Usuarios registrados: {{numUsersRegister}}</h3>
+						<div id="all-users">
+							{{> allUsers}}
+						</div>
+
+						<div id="add-confirm" title="Amigos" style="display:none">
+							<p>
+								<span class="ui-icon ui-icon-alert" style="float:left; margin:0 7px 20px 0;"></span>
+								¿Quiere añadirlo como tu amigo?
+							</p>
+						</div>
+
+						<div id="ifSelectMe" title="Amigos" style="display:none">
+		  					<p>
+		  						No te puedes añadir a ti mismo como amigo.
+		  					</p>
+						</div>
+
 					</div>
 
 				</div>
-
-				<div id="list-of-users">
-
-					<h3>Usuarios registrados: {{numUsersRegister}}</h3>
-					<div id="all-users">
-						{{> allUsers}}
-					</div>
-
-					<div id="add-confirm" title="Amigos" style="display:none">
-						<p>
-							<span class="ui-icon ui-icon-alert" style="float:left; margin:0 7px 20px 0;"></span>
-							¿Quiere añadirlo como tu amigo?
-						</p>
-					</div>
-
-					<div id="ifSelectMe" title="Amigos" style="display:none">
-	  					<p>
-	  						No te puedes añadir a ti mismo como amigo.
-	  					</p>
-					</div>
-
-				</div>
-
-			</div>
+			{{/if}}
 		{{else}}
 			<div id="notRegisterDialog">
 			  	<p>
