Todos los jugadores de una partida volátil de clarcassone deben estar listos para poder comenzar la partida; Para hacer pruebas están las partidas fake creadas en defaultinit con todos los usuarios listos por defecto; Nota: para mayor funcionalidad en la página loguearse como admin (para mostrar botones de torneo, de fake ranking, de crear torneo, etc...)

--- a/PL-BlutBad/client/templates/hall-clarcassone-t.html
+++ b/PL-BlutBad/client/templates/hall-clarcassone-t.html
@@ -17,7 +17,7 @@ http://bootsnipp.com/snippets/featured/condensed-table-example -->
       				<li><span class="label">{{getUsername user_id}}</span></li>
       			{{/each}}
       		</ul>          
-        	<p>Descripcion de como se juega aqui.</p>
+        	<p>Hay partidas sencillas y partidas de Torneos. ¡Tú eliges!</p>
         	<hr>	
             <p><a id="nuevaPartida" class="btn btn-large" href="#"><i class="icon-ok"></i> Crear Partida</a></p>
         	<hr>
