--- a/PL-LowerLayers/prototipo-5/style/client.css
+++ b/PL-LowerLayers/prototipo-5/style/client.css
@@ -134,24 +134,25 @@ input:focus{
 	width: 250px;
 }
 
-#byuserranking table,
-#bygameranking table {
+#bygameranking table,
+#byusergameranking table {
 	border: 1px solid #666;
 	margin: 20px 0 20px 0 !important;
 }
 
-#byuserranking th, #byuserranking td,
-#bygameranking th, #bygameranking td {
+#bygameranking th, #bygameranking td,
+#byusergameranking th, #byusergameranking td {
 	padding: 2px 4px 2px 4px !important;
 	text-align: center;
 	vertical-align: top;
 	background-color: #10B787;
 }
 
-#byuserranking th,
-#bygameranking th {
+#bygameranking th,
+#byusergameranking th {
 	background-color: #247941;
 }
+
 
 
 #accordion{	
