--- a/PL-BlutBad/client/templates/hall-torneo-t.html
+++ b/PL-BlutBad/client/templates/hall-torneo-t.html
@@ -45,6 +45,10 @@
                         Siguiente Etapa(Generar Partidas)
                   </button>
 
+                  <button type="button" class="btn btn-labeled btn-danger resetearTorneo">
+                       Resetear el torneo! 
+                  </button>
+
                   <button type="button" class="btn btn-labeled btn-danger finalizarTorneo">
                        Finalizar el torneo! 
                   </button>
@@ -57,18 +61,16 @@
                 <a href="" class="btn btn-large btn-info etapasTorneo {{etapasTorneoActive}}" data-toggle="tab">{{name}}</a>
               {{/each}}
             </div>
-           
-            {{#if showParticipantes}} 
+
+            {{#if showEtapa}}
+              {{>showInfoEtapaTorneo}}
+            {{else}}
               {{>participantes}}
             {{/if}}
 
-            {{#if showEtapa}}
-              {{>showEtapaTorneo}}
-            {{/if}}
         {{/if}}
 
         {{#if showRankingTorneo}}
-          <p>Este es el ranking del torneo loco!</p>
           {{>multiRanking}}
         {{/if}}
 
@@ -157,17 +159,15 @@
                 <tr>
                   <th>#</th>
                   <th>Nombre</th>
-                  <th>Rango</th>
-                  <th>Maxima Puntuacion</th>                                          
+                  <th>Rango</th>                                      
                 </tr>
               </thead>   
               <tbody>
                  {{#each participantes}}
                   <tr>
-                    <td>--</td>
-                    <td><span class="{{clacc}}">{{getUsername this}}</span>
-                    <td>--</td>
-                    <td>--</td>                                       
+                    <td>{{no}}</td>
+                    <td><span>{{getUsername user_id}}</span>
+                    <td>{{rango}}</td>                                      
                   </tr>
                 {{/each}}
               </tbody>
@@ -180,30 +180,53 @@
 
 
 <template name="showInfoEtapaTorneo">
-{{#if info}}
-  <table class="table table-striped table-condensed">
-    <thead>
-      <tr>
-        <th>Numero de participantes:</th>
-        <th>Numero de partidas:</th>                                         
-      </tr>
-    </thead>   
-    <tbody>
-      <tr>
-        <td>{{info.participantes}}</td>
-        <td>{{info.partidas}}</td>                                    
-      </tr>       
-    </tbody>
-  </table>
+  {{#if info}}
+<div class="container">   
+  <div class="row">
+      <div class="span5">
+       <div class="well">
+        <table class="table"> 
+              <thead>
+                <tr>
+                  <th>Numero de participantes:</th>
+                  <th>Numero de partidas:</th>                                         
+                </tr>
+              </thead>   
+              <tbody>
+                <tr>
+                  <td>{{info.participantes}}</td>
+                  <td>{{info.partidas}}</td>                                    
+                </tr>       
+              </tbody>
+            </table>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+    {{>showEtapaTorneo}}
+
+  {{else}}
+    <div class="container">   
+      <div class="row">
+        <div class="span5">
+         <div class="well">
+            <p>Esta etapa no tiene partidas planificas, lo sentimos.</p>
+          </div>
+        </div>
+      </div>
+    </div>
   {{/if}}
 </template>
 
 <template name="showEtapaTorneo">
-        <div class="span5">
-        
-        {{>showInfoEtapaTorneo}}
+<div class="container">   
+  <div class="row">
+      <div class="span5">
 
-          <table class="table table-striped table-condensed">
+        <table class="table">
             <thead>
             <tr>
               <th>#</th>
@@ -221,32 +244,41 @@
                       <table class="table table-striped table-condensed">
                         <thead>
                           <tr>
-                            <th>Username</th>
+                            <th>Jugador</th>
                             <th>Rango</th>
-                            <th>Role</th>
+                            <th>Puntos</th>
                             <th>Status</th>                                          
                           </tr>
                         </thead>   
                         <tbody>
                           {{#each jugadores}}
                             <tr>
-                              <td>{{getUsername this.user_id}}</td>
-                              <td>{{userRango this.user_id}}</td>
-                              <td>{{this.puntos}}</td>
-                              <td><span class="{{estadoUser this.estado}}">{{this.estado}}</span></td>                                       
+                              <td>{{getUsername user_id}}</td>
+                              <td>{{rango}}</td>
+                              <td>{{#if puntos}}{{puntos}}{{else}}--{{/if}}</td>
+                              <td><span class="{{estadoUser estado}}">{{estado}}</span></td> 
                             </tr>
                           {{/each}}           
                         </tbody>
                       </table>
                      </div>
-                  </td>                    
-                  <td><span class="label label-success" id = "winner">{{getUsername ganador.user_id}}</span></td>                                             
+                  </td>    
+  
+                  <td>
+                      {{#if ganador.user_id}}
+                     <span class="label label-success" id = "winner">{{getUsername ganador.user_id}}</span>
+                     {{else}}
+                     <span class="label label-success" id = "winner">--</span>
+                     {{/if}}
+                  </td>    
+
                 </tr>
               {{/each}}
             </tbody>    
           </table>
-        </div> 
-
+          </div>
+      </div>
+  </div>
 </template>
 
 
@@ -259,27 +291,31 @@
   <div class="row">
       <div class="span5">
        <div class="well">
-        <table class="table">                         
-            <h3>Ranking del torneo!</h3>
-          <thead>
-            <tr>
-              <th>#</th>
-              <th>Nombre</th>
-              <th>Rango</th>
-              <th>Puntuacion Acumulada</th>                                          
-            </tr>
-          </thead>   
-          <tbody>
-            {{#each multiRanking}}
+       {{#if multiRanking}}
+          <table class="table">                         
+              <h3>Ranking del torneo!</h3>
+            <thead>
               <tr>
-                <td>{{no}}</td>
-                <td><span class="{{clacc}}">{{getUsername user_id}}</span>
-                <td>--</td>
-                <td>{{score}}</td>                                       
+                <th>#</th>
+                <th>Nombre</th>
+                <th>Rango</th>
+                <th>Puntuacion Acumulada</th>                                          
               </tr>
-            {{/each}}
-          </tbody>
-        </table>
+            </thead>   
+            <tbody>
+              {{#each multiRanking}}
+                <tr>
+                  <td>{{no}}</td>
+                  <td><span class="{{clacc}}">{{getUsername user_id}}</span>
+                  <td>{{rango}}</td>
+                  <td>{{score}}</td>                                       
+                </tr>
+              {{/each}}
+            </tbody>
+          </table>
+          {{else}}
+            <p>Este es el ranking del torneo loco!</p>
+          {{/if}}
       </div>
     </div>
   </div>    
